k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: python-app
  labels:
    app: python-app
spec:
  selector:
    app: python-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
